--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h1 {
   top: 40%;
   transform: translateX(-50%);
   border: #fff solid 0.2rem;
+  border-radius: 15px;
   text-decoration: none;
   font-size: 1rem;
   font-weight: bold;
